fix(dialog): there should be no spacing between streched buttons in rtl

--- a/packages/default/scss/dialog/_layout.scss
+++ b/packages/default/scss/dialog/_layout.scss
@@ -104,6 +104,7 @@
 
             .k-rtl &,
             [dir='rtl'] & {
+                margin: 0;
                 border-left-width: 0;
                 border-right-width: $dialog-stretched-button-border-width;
             }
